# 5LIG0_AS1

./: .gitignore  CMakeLists.txt  README.md
checks/Assignment1_sanity_check/: sanity_check.py
data/Part1/0-Easy/12/: 5_mission.txt
examples/: config.txt  output2.txt
examples/Assignment1_complete_example/Assignment1_complete_example/: mission.txt  output.txt
scripts/: run.sh
scripts/1_gathering_results/mac/: gather_result_cpp.sh  gather_result_python.sh
scripts/1_gathering_results/windows/: gather_result_cpp.cmd
scripts/2_compare_results/linux/: final_result.csv  runme.sh  sanity_check.py  write_csv.py
scripts/2_compare_results/mac/: write_csv.py
scripts/2_compare_results/windows/: runme.cmd
src/part1/: Makefile  main
src/part1/inc/: dijkstra.h  graph.h  hauler.h  mission.h  siteconfiguration.h
src/part1/src/: dijkstra.cpp  graph.cpp  main.cpp  mission.cpp  siteconfiguration.cpp
src/part2/: 1_output.txt  CMakeLists.txt  Makefile  main
src/part2/inc/: dijkstra.h  graph.h  siteconfiguration.h
src/part2/src/: dijkstra.cpp  graph.cpp  main.cpp  mission.cpp  siteconfiguration.cpp
src/part3/: 2_output.txt  5_output.txt  CMakeLists.txt  main  output.txt
src/part3/inc/: dijkstra.h  hauler.h  mission.h  siteconfiguration.h
src/part3/src/: dijkstra.cpp  main.cpp  siteconfiguration.cpp
src/part4/: CMakeLists.txt
src/part4/inc/: dijkstra.h
src/part4/src/: graph.cpp  main.cpp  mission.cpp  siteconfiguration.cpp
templates/Assignment1_code_template/C++/: Makefile  main  main.cpp
templates/Assignment1_code_template/Python/: main.py
(+922 files in other folders)
